terraform/securitygroup.tf
resource "aws_security_group" "allow-ssh" {
  name = "allow-ssh"
  #vpc_id      = "vpc-c84f9cb0"
  description = "security group that allows ssh and all egress traffic"
  ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  } 
   ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
    ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
tags {
    Name = "allow-ssh"
  }
}
